# tg_bot_shop

./: .env.example  .gitignore  =2.0  README.md  alembic.ini  pyproject.toml
app/: main.py
app/bot/handlers/admin/: branding.py  managers.py  products.py  reviews.py
app/bot/handlers/user/: catalog.py
app/bot/keyboards/: inline.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  branding.py  flavor.py  manager.py  order.py  product.py  review.py  user.py
migrations/: env.py
migrations/versions/: 20250826_add_in_stock_to_products.py  20250827_add_is_deleted_to_products.py  20250827_add_managers_table.py  a7df58a67aae_add_category_relationship.py  bc65bd8642ed_add_flavors_table.py
