[tool.poetry]
name = "shop-bot"
version = "0.1.0"
description = "Telegram bot for product catalog, orders, and admin management"
authors = ["Amin <you@example.com>"]
readme = "README.md"
package-mode = false  

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiogram = "^3.6.0"
uvloop = {version = "^0.19.0", markers = "sys_platform != 'win32'"}
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.34"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
